force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Rise_Rate_YE__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Rise_Rate_YE__c</fullName>
    <label>Rise Rate YE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>