force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Secure_Multiyear__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Secure_Multiyear__c</fullName>
    <label>Secure Multi-year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
                <default>true</default>
                <label>1 year</label>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>