force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Services_Payment_Term_Abbrev__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Services_Payment_Term_Abbrev__c</fullName>
    <description>Synchronized from Default Sales Conditions and Sales Conditions Exception of the contract</description>
    <label>Payment Term for Rendering Services</label>
    <length>50</length>
    <type>Text</type>
</CustomField>