force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Signatories_List__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Signatories_List__c</fullName>
    <description>Specify the list names of signatories for the contract.</description>
    <label>Signatories List</label>
    <type>TextArea</type>
</CustomField>