force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Signatories_Number__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Signatories_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Specify the number of signatories for the contract. Should be different to 1 (default value) if the contract include more than one signartory.</description>
    <inlineHelpText>Specify the number of signatories for the contract. Should be different to 1 (default value) if the contract include more than one signartory.</inlineHelpText>
    <label>Signatories Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>