force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__SimulationNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SimulationNumber__c</fullName>
    <label>Simulation Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>