force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Status__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status__c</fullName>
    <description>Defined the status of the contract (is representating the business life cycle of the contract)</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In preparation</fullName>
                <default>true</default>
                <label>In preparation</label>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Request for approval</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Document Printed</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Confirmed by supplier</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Updated wAddendum</fullName>
            </value>
            <value>
                <fullName>Updated woAddendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>