force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Status_EDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_EDate__c</fullName>
    <label>Status Ending Date</label>
    <type>DateTime</type>
</CustomField>