force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Supplier_Nego_Scope__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Supplier_Nego_Scope__c</fullName>
    <description>Is the nego scope of the contract</description>
    <label>Supplier Nego Scope</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Nego Scope value does not exist or does not match filter criteria (one of the NS of the supplier, having no parent, not a sub-NS).</errorMessage>
        <filterItems>
            <field>$Source.Negoptim__Supplier__c</field>
            <operation>equals</operation>
            <valueField>Negoptim__NegoScope__c.Negoptim__Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>Negoptim__NegoScope__c.Negoptim__Parent_Nego_Scope__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Negoptim__NegoScope__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Sub NS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__NegoScope__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>