force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Support_By__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Support_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last Support intervention user on the row.</description>
    <inlineHelpText>Last Support intervention user on the row.</inlineHelpText>
    <label>Last Support By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Nego_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>