force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__TO11__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__TO11__c</fullName>
    <label>TO11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>