force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_Qty__c</fullName>
    <formula>Negoptim__Qty1__c + Negoptim__Qty2__c + Negoptim__Qty3__c + Negoptim__Qty4__c + Negoptim__Qty5__c + Negoptim__Qty6__c + Negoptim__Qty7__c + Negoptim__Qty8__c + Negoptim__Qty9__c + Negoptim__Qty10__c + Negoptim__Qty11__c + Negoptim__Qty12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>