force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Total_Qty_Balanced__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_Qty_Balanced__c</fullName>
    <label>Total Qty Balanced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>