force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Total_TO__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_TO__c</fullName>
    <formula>Negoptim__TO1__c + Negoptim__TO2__c + Negoptim__TO3__c + Negoptim__TO4__c + Negoptim__TO5__c + Negoptim__TO6__c + Negoptim__TO7__c + Negoptim__TO8__c +  Negoptim__TO9__c + Negoptim__TO10__c + Negoptim__TO11__c + Negoptim__TO12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total TO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>