force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Total_TO_Nego_Init__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_TO_Nego_Init__c</fullName>
    <description>Use to save Initial TO negotiated in case of Total_To update after Contract signature</description>
    <label>Total TO Nego Init</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>