force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Total_TO_Nego_YearBase__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Total_TO_Nego_YearBase__c</fullName>
    <label>Total TO Nego YearBase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>