force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Use_Electronic_Signature__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Use_Electronic_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if the Client/Supplier Contract is using electronic signature management</description>
    <inlineHelpText>Specify if the Client/Supplier Contract is using electronic signature management</inlineHelpText>
    <label>Use Electronic Signature</label>
    <type>Checkbox</type>
</CustomField>