force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__VAT_Rebate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__VAT_Rebate_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>VAT to apply to rebate invoicing process (synchronized with Default Sales Policy and sales policy exception)</description>
    <inlineHelpText>VAT to apply to rebate invoicing process (synchronized with Default Sales Policy and sales policy exception)</inlineHelpText>
    <label>VAT Rebate Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>