force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Landing.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Landing</fullName>
    <active>true</active>
    <label>Landing</label>
</RecordType>