force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Nego_Base.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Nego_Base</fullName>
    <active>true</active>
    <description>This will be used as the reference of any next year negotiation</description>
    <label>Nego Base</label>
</RecordType>