force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Nego_Base_Init.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Nego_Base_Init</fullName>
    <active>true</active>
    <description>This will be used to fix start of nego process based on current year contrract aggregation</description>
    <label>Nego Base Init</label>
</RecordType>