force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Period_Extension.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Period_Extension</fullName>
    <active>true</active>
    <label>Period Extension</label>
</RecordType>