force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__PostNego_Simulation.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__PostNego_Simulation</fullName>
    <active>true</active>
    <label>PostNego Simulation</label>
</RecordType>