force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Proposal.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Proposal</fullName>
    <active>true</active>
    <label>Proposal</label>
</RecordType>