force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Safe_Balance.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Safe_Balance</fullName>
    <active>true</active>
    <label>Safe Balance</label>
</RecordType>