force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Signed.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Signed</fullName>
    <active>true</active>
    <description>Record type used when a contract is approved by all the approvers and status set as &apos;Signed&apos;</description>
    <label>Signed</label>
</RecordType>