force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Signed_Copy.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Signed_Copy</fullName>
    <active>true</active>
    <description>Make a frozen copy of the contract at the Signture step</description>
    <label>Signed Copy</label>
</RecordType>