force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Simulation.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Simulation</fullName>
    <active>true</active>
    <label>Simulation</label>
</RecordType>