force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__Target.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Target</fullName>
    <active>true</active>
    <label>Target</label>
</RecordType>