force-app/main/default/objects/Negoptim__Contract__c/recordTypes/Negoptim__To_Be_Signed.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__To_Be_Signed</fullName>
    <active>true</active>
    <description>Record type used when a contract is in a status different than &apos;Signed&apos;</description>
    <label>To Be Signed</label>
</RecordType>