force-app/main/default/objects/Negoptim__Contract__c/listViews/Negoptim__All.listView-meta.xml
<ListView>
    <fullName>Negoptim__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>